Update generate endpoint to receive the size as query param
